ASB-310 Revise endpoint to allow filtering by search text
